Update translation file
Update for new unique for pillaging cities

--- a/jsons/translations/English.properties
+++ b/jsons/translations/English.properties
@@ -631,6 +631,8 @@ Gold reward for clearing barbarian camps = Data reward for clearing rogue robot 
 
 Receive triple Gold from Barbarian encampments and pillaging Cities = Receive triple Data from pillaging Factories
 
+Receive [relativeAmount]% Gold from Barbarian encampments and pillaging Cities = Receive [relativeAmount]% Data from pillaging Factories
+
 Clear Barbarian Camp = Clear Rogue Robot Factory
 
 reveal nearby Barbarian camps = reveal nearby Rogue robot factories
