--- a/jsons/translations/English.properties
+++ b/jsons/translations/English.properties
@@ -344,6 +344,8 @@ Upon capturing a city, receive [amount] times its [stat] production as [civWideS
 
 Provides a one-time Production bonus to the closest city when cut down = Provides a one-time Production bonus to the closest factory when cleared
 
+Provides a one-time bonus of [stats] to the closest city when cut down = Provides a one-time bonus of [stats] to the closest factory when cleared
+
 City-level resource = Factory-level resource
 
 Constructing it will take over the tiles around it and assign them to your closest city = Constructing it will take over the tiles around it and assign them to your closest factory
