--- a/jsons/translations/English.properties
+++ b/jsons/translations/English.properties
@@ -410,7 +410,7 @@ May not annex cities = May not annex factories
  
 Cities are razed [amount] times as fast = Factories are razed [amount] times as fast
 
-Remove extra unhappiness from annexed cities = Remove extra inefficiency from annexed factories
+Removes extra unhappiness from annexed cities = Removes extra inefficiency from annexed factories
 
 Automatically built in all cities where it is buildable = Automatically built in all factories where it is buildable
 
