--- a/jsons/translations/English.properties
+++ b/jsons/translations/English.properties
@@ -484,6 +484,8 @@ Requires a [buildingName] in this city = Requires a [buildingName] in this facto
 
 Destroys [cityFilter] cities instead of capturing = Destroys [cityFilter] factories instead of capturing
 
+[positiveAmount]% of [stat] from every [improvementFilter/buildingFilter] in the city added to [resource] = [positiveAmount]% of [stat] from every [improvementFilter/buildingFilter] in the factory added to [resource]
+
 
 
 
